--- a/_posts/2017-02-05-16逝17始.md
+++ b/_posts/2017-02-05-16逝17始.md
@@ -1,14 +1,14 @@
-# 16年逝，17年始
+## 16年逝，17年始
 
 > 屎屎屎，都是屎。。。
 
 > 一年又转一年，感觉白驹过隙的，是否又废了这365天，过成了一个老爷爷老太太的模样？
 
-## 关键字：读书
+### 关键字：读书
 
 16年的关键字该是读书，虽然量不大，但还是开了个好头。也多亏自己这浮躁的嫉妒心被《微信读书》抓个正着。
 
-## 认知：钱到底是什么
+### 认知：钱到底是什么
 
 16年，自己的认知发生了很大的变化，特别是对钱的认识上。
 
@@ -24,7 +24,7 @@
 
 这几样比钱更重要的东西，成了我在kindle花几百块买电子书的理由：随着互联网的开放，我们当然可以找到大部分资源，但是找资源的过程中，我们有可能会失去比金钱更重要的东西，时间，精力。
 
-## 关于“老好人”
+### 关于“老好人”
 
 年底最大的收获是，下定了决心，不再做一个虚假的“老好人”。
 
