--- a/source/_posts/20210117-org-mode-again.org
+++ b/source/_posts/20210117-org-mode-again.org
@@ -52,8 +52,7 @@
      (defvar foo-service-hosts '("127.0.0.1" "192.168.1.101"))
      (defun run-on-ops (cmd)
        "Run CMD on ops server."
-       (format "I am the cmd (%s) result." cmd)
-       )
+       (format "I am the cmd (%s) result." cmd))
    #+end_src
 
    #+RESULTS:
