--- a/source/_posts/2025-08-17-i-am-back.md
+++ b/source/_posts/2025-08-17-i-am-back.md
@@ -9,10 +9,10 @@ tags:
 ---
 
 > 最近又有了些兴致, 想继续写点东西.
->
 > 看了一下上一篇文章, 嚯, 已经是两年前了, 不禁有些恍惚.
->
 > 其实近几年即使有些文章, 也是一年两篇, H1一篇 H2一篇, 哈哈哈.
+
+![cube pb](images/cube-pb.jpg)
 
 # 两年半复盘
 
